fix: remove directories